--- a/shop-config-server/src/main/resources/config/master/shop-manager-provider-dev.properties
+++ b/shop-config-server/src/main/resources/config/master/shop-manager-provider-dev.properties
@@ -1,6 +1,6 @@
 server.port=8085
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shopproduce?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shopproduct?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
